--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@ h1 {
     color: white;
 }
 
-#Canvas {
+#canvas {
     background-color: white;
     margin-bottom: 15px;
     border: 5px solid black;
