add header documentation

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,9 @@
+/** 
+Author: Goshanraj Govindaraj (#) & Arkel Ziko (400586552)
+Date: Thursday, March 6, 2025 at 8:35 AM
+Description: The CSS for the frontend/UI of the Canvas
+*/
+
 body {
     padding: 0;
     margin: 0;
