--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ h1 {
     margin-bottom: 15px;
     border: 5px solid black;
     text-align: center;
-    padding: 3%;
+    overscroll-behavior: none;
 }
 
 .controls {
@@ -31,6 +31,7 @@ h1 {
     gap: 40px;
     max-width: 750px;
     margin: 0 auto;
+    margin-top: 3%;
 }
 
 .form-column {
