added triangle drawing

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 /** 
-Author: Goshanraj Govindaraj (#) & Arkel Ziko (400586552)
+Author: Goshanraj Govindaraj (400559969) & Arkel Ziko (400586552)
 Date: Thursday, March 6, 2025 at 8:35 AM
 Description: The CSS for the frontend/UI of the Canvas
 */
